# hulk-compiler

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
crates/: repomix-output.xml
crates/hulk-ast/: Cargo.toml  mod.rs
crates/hulk-ast/src/: lib.rs
crates/hulk-cli/: Cargo.toml
crates/hulk-cli/src/: main.rs
crates/hulk-codegen/: Cargo.toml  README.md  build.rs
crates/hulk-codegen/examples/: smoke.rs
crates/hulk-codegen/src/: context.rs  emit.rs  error.rs  itables.rs  layout.rs  lib.rs  options.rs  runtime_decls.rs
crates/hulk-codegen/src/lower/: binding.rs  builtins.rs  call.rs  control.rs  decl.rs  for_loop.rs  index.rs  lambda.rs  literal.rs  member.rs  method.rs  mod.rs  new.rs  operators.rs  pattern.rs  scope.rs  type_ops.rs  utils.rs  variable.rs  vector.rs
crates/hulk-lexer/: Cargo.toml
crates/hulk-lexer/src/: lib.rs
crates/hulk-parser/: Cargo.toml  GRAMMAR_LL1.md  README.md
crates/hulk-parser/src/: lib.rs
crates/hulk-rt/: Cargo.toml
crates/hulk-rt/src/: lib.rs
crates/hulk-semantic/: Cargo.toml  README.md  repomix-output.xml
crates/hulk-semantic/src/: environment.rs  error.rs  lib.rs  typed.rs
crates/hulk-semantic/src/passes/: check.rs  collect.rs  hierarchy.rs  infer.rs  infer_utils.rs  mod.rs  resolve_constructor_params.rs  utils.rs
crates/hulk-semantic/src/types/: mod.rs  registry.rs
docs/: CODE_GEN_IMPLEMENTATION_GUIDE.md  PRE-SEMANTIC_STATUS.md  REPORT.md  SEMANTIC_IMPLEMENTATION_GUIDE.md  SEMANTIC_IMPLEMENTATION_PLAN.md  main.tex
scripts/: setup_llvm17_ubuntu.sh  setup_llvm17_windows.ps1
tests/cli/: arithmetic_output.hulk  function_output.hulk
tests/extra/match/: match_literal.hulk  match_string.hulk  match_type.hulk  match_variable.hulk
tests/extra/vectors/: vector_comprehension.hulk  vector_iteration.hulk  vector_literal.hulk  vector_size.hulk
