[package]
name = "hulk-cli"
version.workspace = true
edition.workspace = true

[dependencies]
hulk-lexer = { path = "../hulk-lexer" }
hulk-parser = { path = "../hulk-parser" }
hulk-semantic = { path = "../hulk-semantic" }
hulk-codegen = { path = "../hulk-codegen" }
clap = { version = "4", features = ["derive"] }
