[package]
name = "hulk-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
hulk-ast = { path = "../hulk-ast" }
hulk-semantic = { path = "../hulk-semantic" }
# Feature flag is bound to LLVM 17.x and must travel together with the LLVM
# development files available on the build machine. See build.rs and
# README.md in this crate for the toolchain setup this depends on.
inkwell = { version = "0.4", features = ["llvm17-0"] }

[dev-dependencies]
hulk-lexer = { path = "../hulk-lexer" }
hulk-parser = { path = "../hulk-parser" }
